--- a/app/views/subjects/raw.html.erb
+++ b/app/views/subjects/raw.html.erb
@@ -14,11 +14,9 @@
   <%- @opts = [@s.image, width, height] -%>
   <%= render partial: "image", obj: @opts %>
 	<%- Milkman::Application.config.project["object_types"].keys.each do |type| -%>
-		<%- @raw.annotations[type]["raw"].each_with_index do |d,i| -%>
-		
+		<%- @raw[type]["raw"].each_with_index do |d,i| -%>
 			<%- @obj = [d, @s.zooniverse_id, scale, @types[type]["hex"], i, "raw"] -%>
 	        <%= render partial: "#{type}", obj: @obj %>
-		
 		<%- end -%>
 	<%- end -%>
   <text fill="#ffffff" stroke="none" font="10px &quot;Arial&quot;" text-anchor="left" y="<%= (Milkman::Application.config.project["image"]["height"]-15)*scale %>" x="<%= 10*scale %>" >Raw Drawings</text>
