--- a/public/stylesheets/mwp-styles.css
+++ b/public/stylesheets/mwp-styles.css
@@ -1,4 +1,4 @@
-html{background:#fff;color:#E6241C;font:300 14px "Open Sans",sans-serif}
+html{background:#fff;color:#000000;font:300 14px "Open Sans",sans-serif}
 body{margin:0 auto; width: 960px}
 h1{font-size:34px;font-weight:inherit;margin:50px 0 5px}
 h1~p{font-size:22px}
