--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,6 +1,6 @@
-<% scale = 960.0/Milkman::Application.config.project["image"]["width"] %>
-<% width = Milkman::Application.config.project["image"]["width"]*scale %>
-<% height = Milkman::Application.config.project["image"]["height"]*scale %>
+<% scale = 960.0/@s.width %>
+<% width = @s.width*scale %>
+<% height = @s.height*scale %>
 <% @types = Milkman::Application.config.project["object_types"] %>
 
 <%- if @s.image_count>0 -%>
@@ -35,7 +35,7 @@
         <span class="stretch"></span></ul>
 </div>
 <div id="maps">
-  <svg height="<%= height %>" version="1.1" width="<%= width %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 <%= width %> <%= height %>" preserveAspectRatio="xMinYMin" style="overflow: hidden; position: relative;">
+  <svg height="<%= height %>" version="1.1" width="<%= width %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 <%= width.to_s %> <%= height.to_s %>" preserveAspectRatio="xMinYMin" style="overflow: hidden; position: relative;">
   <%- @opts = [@s.image, width, height] -%>
   <%= render partial: "image", obj: @opts %>
 
