--- a/app/views/subjects/raw.html.erb
+++ b/app/views/subjects/raw.html.erb
@@ -8,9 +8,15 @@
   <image xlink:href="<%= @s.image %>" preserveAspectRatio="xMidYMid meet" width="<%= width %>" height="<%= height %>"/>
   <% count = 0 %>
   <% @raw.each do |d| %>
-    <% colour = @hex[d["name"]] %>
-    <ellipse cx="<%= d["center"][0].to_f*scale %>" cy="<%= d["center"][1].to_f*scale %>" rx="<%= d["rx"].to_f*scale %>" ry="<%= d["ry"].to_f*scale %>" fill="#000000" stroke="<%= colour %>" fill-opacity="0" stroke-width="<%= 4*scale %>" tabindex="0" opacity="0.2" transform="rotate(<%= d["angle"] %>, <%= d["center"][0].to_f*scale %>, <%= d["center"][1].to_f*scale %>)" ></ellipse>
-    <% count+=1 %>
+  	<%- if d.has_key? "center" -%>
+	    <% colour = @hex[d["name"]] %>
+	    <ellipse cx="<%= d["center"][0].to_f*scale %>" cy="<%= d["center"][1].to_f*scale %>" rx="<%= d["rx"].to_f*scale %>" ry="<%= d["ry"].to_f*scale %>" fill="#000000" stroke="<%= colour %>" fill-opacity="0" stroke-width="<%= 4*scale %>" tabindex="0" opacity="0.2" transform="rotate(<%= d["angle"] %>, <%= d["center"][0].to_f*scale %>, <%= d["center"][1].to_f*scale %>)" ></ellipse>
+	    <% count+=1 %>
+	 <%- else -%>
+	    <% colour = @hex[d["content"]] %>
+	    <rect x="<%= (d["left"].to_f)*scale %>" y="<%= (d["top"].to_f)*scale %>" width="<%= (d["width"].to_f)*scale %>" height="<%= (d["height"].to_f)*scale %>" fill="#000000" stroke="<%= colour %>" fill-opacity="0" stroke-width="<%= 4*scale %>" tabindex="0" opacity="0.2" />
+	    <% count+=1 %>
+	 <%- end -%>
   <% end %>
   <text fill="#ffffff" stroke="none" font="10px &quot;Arial&quot;" text-anchor="left" y="<%= 384*scale %>" x="<%= 10*scale %>" >Raw Drawings</text>
 </svg>
